--- a/prepros.config
+++ b/prepros.config
@@ -97,7 +97,7 @@
         "browsers": [
           "> 2%",
           "not dead",
-          ">last 10 versions"
+          "> last 10 versions"
         ],
         "sourceMap": false
       },
@@ -119,6 +119,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -128,6 +129,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -166,6 +168,7 @@
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -175,6 +178,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -593,7 +597,7 @@
         "output": {
           "extension": ".css",
           "type": "SOURCE_RELATIVE",
-          "relativePath": "../dist/styles",
+          "relativePath": "../dist/styles/",
           "suffix": "-dist",
           "alwaysSuffix": false
         }
@@ -912,17 +916,6 @@
     },
     "files": [
       {
-        "file": "dist/styles/app.css",
-        "config": {
-          "tasks": {
-            "postcss-import": {
-              "enable": true
-            }
-          },
-          "autoCompile": true
-        }
-      },
-      {
         "file": "scss/app.scss",
         "config": {
           "customOutput": "dist\\styles\\app.css"
@@ -931,15 +924,12 @@
       {
         "file": "styles/app.css",
         "config": {
-          "autoCompile": true,
           "tasks": {
-            "postcss-import": {
-              "enable": true
-            },
             "postcss-preset-env": {
               "enable": true
             }
-          }
+          },
+          "autoCompile": true
         }
       }
     ]
