finished hero banner

--- a/prepros.config
+++ b/prepros.config
@@ -96,8 +96,7 @@
         "grid": "autoplace",
         "browsers": [
           "> 2%",
-          "not dead",
-          "> last 10 versions"
+          "not dead"
         ],
         "sourceMap": false
       },
@@ -924,12 +923,12 @@
       {
         "file": "styles/app.css",
         "config": {
+          "autoCompile": true,
           "tasks": {
             "postcss-preset-env": {
               "enable": true
             }
-          },
-          "autoCompile": true
+          }
         }
       }
     ]
