--- a/prepros.config
+++ b/prepros.config
@@ -96,8 +96,7 @@
         "grid": "autoplace",
         "browsers": [
           "> 2%",
-          "not dead",
-          ">last 10 versions"
+          "not dead"
         ],
         "sourceMap": false
       },
@@ -119,6 +118,7 @@
           "@babel/preset-flow": false
         },
         "plugins": {
+          "@babel/plugin-proposal-class-static-block": false,
           "@babel/plugin-proposal-class-properties": false,
           "@babel/plugin-proposal-decorators": {
             "enable": false,
@@ -128,6 +128,7 @@
           },
           "@babel/plugin-proposal-export-namespace-from": false,
           "@babel/plugin-proposal-function-sent": false,
+          "@babel/plugin-proposal-logical-assignment-operators": false,
           "@babel/plugin-proposal-nullish-coalescing-operator": false,
           "@babel/plugin-proposal-numeric-separator": false,
           "@babel/plugin-proposal-optional-chaining": false,
@@ -166,6 +167,7 @@
               "@babel/preset-flow": false
             },
             "plugins": {
+              "@babel/plugin-proposal-class-static-block": false,
               "@babel/plugin-proposal-class-properties": false,
               "@babel/plugin-proposal-decorators": {
                 "enable": false,
@@ -175,6 +177,7 @@
               },
               "@babel/plugin-proposal-export-namespace-from": false,
               "@babel/plugin-proposal-function-sent": false,
+              "@babel/plugin-proposal-logical-assignment-operators": false,
               "@babel/plugin-proposal-nullish-coalescing-operator": false,
               "@babel/plugin-proposal-numeric-separator": false,
               "@babel/plugin-proposal-optional-chaining": false,
@@ -593,7 +596,7 @@
         "output": {
           "extension": ".css",
           "type": "SOURCE_RELATIVE",
-          "relativePath": "../dist/styles",
+          "relativePath": "../dist/styles/",
           "suffix": "-dist",
           "alwaysSuffix": false
         }
@@ -912,17 +915,6 @@
     },
     "files": [
       {
-        "file": "dist/styles/app.css",
-        "config": {
-          "tasks": {
-            "postcss-import": {
-              "enable": true
-            }
-          },
-          "autoCompile": true
-        }
-      },
-      {
         "file": "scss/app.scss",
         "config": {
           "customOutput": "dist\\styles\\app.css"
@@ -933,9 +925,6 @@
         "config": {
           "autoCompile": true,
           "tasks": {
-            "postcss-import": {
-              "enable": true
-            },
             "postcss-preset-env": {
               "enable": true
             }
